force-app/main/default/objects/Invoices__c/Invoices__c.object-meta.xml
<CustomObject>
    <description>Created in accordance with Contract payment information</description>
    <label>Payments</label>
    <nameField>
        <displayFormat>Bags-18-{000000}</displayFormat>
        <label>Fact No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>