force-app/main/default/objects/Invoices__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <formula>Contract_Payments__r.Contract_Agreement__r.Account__r.ABN_Tax_Reference__c</formula>
    <label>ABN</label>
    <type>Text</type>
</CustomField>