force-app/main/default/objects/Invoices__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Contract_Payments__r.Contract_Agreement__r.Account__r.BillingStreet &amp; BR() 
&amp; Contract_Payments__r.Contract_Agreement__r.Account__r.BillingCity &amp; BR() 
&amp; Contract_Payments__r.Contract_Agreement__r.Account__r.BillingState &amp; BR()
&amp; Contract_Payments__r.Contract_Agreement__r.Account__r.BillingPostalCode &amp;BR()
&amp; Contract_Payments__r.Contract_Agreement__r.Account__r.BillingCountry</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>