force-app/main/default/objects/Invoices__c/fields/Contract_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry__c</fullName>
    <formula>TEXT(MONTH(Contract_Payments__r.Contract_Agreement__r.Contract_End_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Contract_Payments__r.Contract_Agreement__r.Contract_End_Date__c))</formula>
    <label>Contract Expiry</label>
    <type>Text</type>
</CustomField>