force-app/main/default/objects/Invoices__c/fields/Contract_Payments__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Payments</label>
    <referenceTo>Contract_Payments__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>