force-app/main/default/objects/Invoices__c/fields/Contract_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Terminated</label>
    <type>Checkbox</type>
</CustomField>