force-app/main/default/objects/Invoices__c/fields/Contract_Termination_Date_System__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Date_System__c</fullName>
    <formula>Contract_Payments__r.Contract_Agreement__r.Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Termination Date (System)</label>
    <type>Date</type>
</CustomField>