force-app/main/default/objects/Invoices__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Centre</label>
    <length>40</length>
    <type>Text</type>
</CustomField>