force-app/main/default/objects/Invoices__c/fields/EQ_Invoice_reference__c.field-meta.xml
<CustomField>
    <fullName>EQ_Invoice_reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>