force-app/main/default/objects/Invoices__c/fields/EQ_Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>EQ_Supplier_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EQ Supplier Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>