force-app/main/default/objects/Invoices__c/fields/File_Attachment__c.field-meta.xml
<CustomField>
    <fullName>File_Attachment__c</fullName>
    <formula>&quot;It is mandatory to attach CTA / PRISM report as proof of criteria met. Signed contract is required to be uploaded under Agreement section within the Account.Enable chatter, attachments.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Attachment</label>
    <type>Text</type>
</CustomField>