force-app/main/default/objects/Invoices__c/fields/Likelihood_to_Pay_Manual__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Pay_Manual__c</fullName>
    <description>financial forecast to be captured in SF so that accurate Financial budget can be made</description>
    <label>Likelihood to Pay (Manual)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Not Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>