force-app/main/default/objects/Invoices__c/fields/Payment_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Payment_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of the criteria for payment eg: share achievement in first 3 months of agreement</inlineHelpText>
    <label>Payment Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>