force-app/main/default/objects/Invoices__c/fields/Payment_Due_Date_System__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Due Date (System)</label>
    <type>Date</type>
</CustomField>