force-app/main/default/objects/Invoices__c/fields/Payment_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Payment_Qualified__c</fullName>
    <label>Payment Qualified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>