force-app/main/default/objects/Invoices__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Head of B&amp;G Rejected</fullName>
            </value>
            <value>
                <fullName>Payment Processed</fullName>
            </value>
            <value>
                <fullName>NAM Approved</fullName>
            </value>
            <value>
                <fullName>NAM Rejected</fullName>
            </value>
            <value>
                <fullName>Pending with Sales Support Team</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Pending with Sales Performance Team</fullName>
            </value>
            <value>
                <fullName>Head of Agency Rejected</fullName>
            </value>
            <value>
                <fullName>NIL Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>