force-app/main/default/objects/Invoices__c/fields/UATP_number__c.field-meta.xml
<CustomField>
    <fullName>UATP_number__c</fullName>
    <label>UATP number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>