force-app/main/default/objects/Invoices__c/recordTypes/Agency_Payments.recordType-meta.xml
<RecordType>
    <fullName>Agency_Payments</fullName>
    <active>true</active>
    <description>Record Type for Agency Qantas Channel related payments</description>
    <label>Agency Payments</label>
</RecordType>