force-app/main/default/objects/Invoices__c/recordTypes/Approved_Agency_Payments.recordType-meta.xml
<RecordType>
    <fullName>Approved_Agency_Payments</fullName>
    <active>true</active>
    <description>To lock key fields once agency payment has been approved</description>
    <label>Approved Agency Payments</label>
</RecordType>