force-app/main/default/objects/Invoices__c/recordTypes/Approved_Corporate_Payments.recordType-meta.xml
<RecordType>
    <fullName>Approved_Corporate_Payments</fullName>
    <active>true</active>
    <description>This determines the Invoice records that belong to Approved Corporate Payments</description>
    <label>Approved Corporate Payments</label>
</RecordType>