force-app/main/default/objects/Invoices__c/recordTypes/New_Corporate_Payments.recordType-meta.xml
<RecordType>
    <fullName>New_Corporate_Payments</fullName>
    <active>true</active>
    <description>This determines the Invoice records that belong to New Corporate Payments</description>
    <label>New Corporate Payments</label>
</RecordType>