force-app/main/default/objects/Invoices__c/validationRules/QP_No_EQ_reference_for_Nil_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>QP_No_EQ_reference_for_Nil_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;Approved_Agency_Payments&apos;,  TEXT(Status__c)  == &apos;NIL Payment&apos;,  NOT(ISBLANK( EQ_Invoice_reference__c ) ) )</errorConditionFormula>
    <errorMessage>You cannot enter an EQ Reference number for a NIL Payment Invoice</errorMessage>
</ValidationRule>