force-app/main/default/objects/Invoices__c/listViews/Agency_Sales_Performance_Americas_Invoices.listView-meta.xml
<ListView>
    <fullName>Agency_Sales_Performance_Americas_Invoices</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Payment_Due_Date_System__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Payment_Due_Date_System__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:45</value>
    </filters>
    <label>Agency Sales Performance Americas</label>
    <queue>Agency_Sales_Performance_Americas</queue>
    <sharedTo>
        <group>Agency_Sales_Performance_Team</group>
    </sharedTo>
</ListView>