force-app/main/default/objects/Invoices__c/listViews/My_Pending_Payments.listView-meta.xml
<ListView>
    <fullName>My_Pending_Payments</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>ABN__c</columns>
    <columns>Amount__c</columns>
    <columns>Paid__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Paid__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>My Pending Payments</label>
</ListView>