force-app/main/default/objects/Invoices__c/listViews/Pending_with_Sales_Support_Team.listView-meta.xml
<ListView>
    <fullName>Pending_with_Sales_Support_Team</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending with Sales Support Team,Pending with Sales Performance Team</value>
    </filters>
    <label>Pending with Sales Support Team</label>
</ListView>